// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectableCard renders correctly with checkbox type 1`] = `
<DocumentFragment>
  .cache-4bnz2x-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-4bnz2x-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-4bnz2x-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-1234xrv-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='false'],
.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq6,
.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1234xrv-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-1234xrv-CheckboxContainer-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-1234xrv-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-1234xrv-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-aitsb9-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-aitsb9-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-aitsb9-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-aitsb9-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-aitsb9-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-aitsb9-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-aitsb9-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-aitsb9-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-aitsb9-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1at8irr-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<div
    class="cache-4bnz2x-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="false"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-1234xrv-CheckboxContainer-StyledElement eqr7bqq1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-aitsb9-CheckboxInput eqr7bqq2"
        id="checkbox"
        name="checkbox"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1lcemq7-StyledIcon eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-1at8irr-InnerCheckbox eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
    Checkbox card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with checkbox type and checked prop 1`] = `
<DocumentFragment>
  .cache-4bnz2x-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-4bnz2x-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-4bnz2x-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-1234xrv-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='false'],
.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq6,
.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1234xrv-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-1234xrv-CheckboxContainer-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-1234xrv-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-1234xrv-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-aitsb9-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-aitsb9-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-aitsb9-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-aitsb9-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-aitsb9-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-aitsb9-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-aitsb9-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-aitsb9-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-aitsb9-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1at8irr-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<div
    class="cache-4bnz2x-Container e1s5n3hj1"
    data-checked="true"
    data-disabled="false"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-1234xrv-CheckboxContainer-StyledElement eqr7bqq1"
      data-checked="true"
      data-error="false"
    >
      <input
        aria-invalid="false"
        checked=""
        class="cache-aitsb9-CheckboxInput eqr7bqq2"
        id="radio"
        name="radio"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1lcemq7-StyledIcon eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-1at8irr-InnerCheckbox eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with checkbox type and disabled prop 1`] = `
<DocumentFragment>
  .cache-4bnz2x-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-4bnz2x-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-4bnz2x-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-1234xrv-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='false'],
.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq6,
.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1234xrv-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-1234xrv-CheckboxContainer-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-1234xrv-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-1234xrv-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-aitsb9-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-aitsb9-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-aitsb9-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-aitsb9-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-aitsb9-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-aitsb9-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-aitsb9-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-aitsb9-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-aitsb9-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1at8irr-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<div
    class="cache-4bnz2x-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="true"
  >
    <div
      aria-disabled="true"
      class="e1s5n3hj0 cache-1234xrv-CheckboxContainer-StyledElement eqr7bqq1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-aitsb9-CheckboxInput eqr7bqq2"
        disabled=""
        id="radio"
        name="radio"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1lcemq7-StyledIcon eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-1at8irr-InnerCheckbox eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with checkbox type and isError prop 1`] = `
<DocumentFragment>
  .cache-4bnz2x-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-4bnz2x-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-4bnz2x-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-1234xrv-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='false'],
.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq6,
.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1234xrv-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-1234xrv-CheckboxContainer-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-1234xrv-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-1234xrv-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-aitsb9-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-aitsb9-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-aitsb9-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-aitsb9-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-aitsb9-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-aitsb9-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-aitsb9-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-aitsb9-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-aitsb9-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1at8irr-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

.cache-1czoby1-StyledText-PaddedText {
  color: #b3144d;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0 4px;
}

<div
    class="cache-4bnz2x-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="false"
    data-error="true"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-1234xrv-CheckboxContainer-StyledElement eqr7bqq1"
      data-checked="false"
      data-error="true"
    >
      <input
        aria-describedby="radio-hint"
        aria-invalid="true"
        class="cache-aitsb9-CheckboxInput eqr7bqq2"
        id="radio"
        name="radio"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1lcemq7-StyledIcon eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-1at8irr-InnerCheckbox eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
    <p
      class="eqr7bqq4 cache-1czoby1-StyledText-PaddedText e13y3mga0"
    />
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with checkbox type and tooltip prop 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-4bnz2x-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-4bnz2x-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-4bnz2x-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-1234xrv-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='false'],
.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq6,
.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1234xrv-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-1234xrv-CheckboxContainer-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-1234xrv-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-1234xrv-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-aitsb9-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-aitsb9-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-aitsb9-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-aitsb9-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-aitsb9-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-aitsb9-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-aitsb9-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-aitsb9-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-aitsb9-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1at8irr-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<div
    aria-describedby=":rn:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <div
      class="cache-4bnz2x-Container e1s5n3hj1"
      data-checked="false"
      data-disabled="false"
    >
      <div
        aria-disabled="false"
        class="e1s5n3hj0 cache-1234xrv-CheckboxContainer-StyledElement eqr7bqq1"
        data-checked="false"
        data-error="false"
      >
        <input
          aria-invalid="false"
          class="cache-aitsb9-CheckboxInput eqr7bqq2"
          id="checkbox"
          name="checkbox"
          type="checkbox"
          value="choice"
        />
        <svg
          class="cache-1lcemq7-StyledIcon eqr7bqq3"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <rect
              class="cache-1at8irr-InnerCheckbox eqr7bqq7"
              height="14"
              rx="2px"
              stroke-width="2"
              width="14"
              x="5"
              y="5"
            />
            <rect
              class="cache-1nkq693-CheckMixedMark eqr7bqq5"
              height="2"
              rx="1"
              width="8"
              x="8"
              y="11"
            />
            <rect
              class="cache-1nu9t2r-CheckMark eqr7bqq6"
              height="8"
              rx="1"
              width="8"
              x="8"
              y="8"
            />
          </g>
        </svg>
      </div>
      Checkbox card
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with complex children 1`] = `
<DocumentFragment>
  .cache-4bnz2x-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-4bnz2x-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-4bnz2x-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-1234xrv-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='false'],
.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq6,
.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1234xrv-CheckboxContainer-StyledElement .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-1234xrv-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1234xrv-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-1234xrv-CheckboxContainer-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-1234xrv-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-1234xrv-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-1234xrv-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-aitsb9-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-aitsb9-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-aitsb9-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-aitsb9-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-aitsb9-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-aitsb9-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-aitsb9-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-aitsb9-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-aitsb9-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1at8irr-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<div
    class="cache-4bnz2x-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="true"
  >
    <div
      aria-disabled="true"
      class="e1s5n3hj0 cache-1234xrv-CheckboxContainer-StyledElement eqr7bqq1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-aitsb9-CheckboxInput eqr7bqq2"
        disabled=""
        id="radio"
        name="radio"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1lcemq7-StyledIcon eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-1at8irr-InnerCheckbox eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
    <div
      style="background: gray; color: gray;"
    >
      Complex radio card
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with default props 1`] = `
<DocumentFragment>
  .cache-4bnz2x-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-4bnz2x-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-4bnz2x-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-17dmuxp-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='false'],
.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-17dmuxp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-17dmuxp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-17dmuxp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffebf2;
  fill: #b3144d;
}

.cache-17dmuxp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #d9dadd;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-17dmuxp-RadioContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-17dmuxp-RadioContainer-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-17dmuxp-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-17dmuxp-RadioContainer-StyledElement label {
  display: none;
}

.cache-po1kkw-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-po1kkw-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-po1kkw-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-po1kkw-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #b3144d;
}

.cache-po1kkw-RadioInput:focus+.ehkrmld2 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-po1kkw-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffebf2;
  fill: #b3144d;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-j51tvx-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b5b7bd;
}

.cache-j51tvx-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-u6wkt9-InnerCircleRing {
  fill: #b5b7bd;
}

<div
    class="cache-4bnz2x-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="false"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-17dmuxp-RadioContainer-StyledElement ehkrmld0"
      data-checked="false"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="cache-po1kkw-RadioInput ehkrmld1"
        id="radio-choice"
        name="radio"
        type="radio"
        value="choice"
      />
      <svg
        class="cache-j51tvx-StyledIcon ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-u6wkt9-InnerCircleRing ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
    </div>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with radio type and checked prop 1`] = `
<DocumentFragment>
  .cache-4bnz2x-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-4bnz2x-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-4bnz2x-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-17dmuxp-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='false'],
.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-17dmuxp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-17dmuxp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-17dmuxp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffebf2;
  fill: #b3144d;
}

.cache-17dmuxp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #d9dadd;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-17dmuxp-RadioContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-17dmuxp-RadioContainer-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-17dmuxp-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-17dmuxp-RadioContainer-StyledElement label {
  display: none;
}

.cache-po1kkw-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-po1kkw-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-po1kkw-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-po1kkw-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #b3144d;
}

.cache-po1kkw-RadioInput:focus+.ehkrmld2 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-po1kkw-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffebf2;
  fill: #b3144d;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-j51tvx-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b5b7bd;
}

.cache-j51tvx-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-u6wkt9-InnerCircleRing {
  fill: #b5b7bd;
}

<div
    class="cache-4bnz2x-Container e1s5n3hj1"
    data-checked="true"
    data-disabled="false"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-17dmuxp-RadioContainer-StyledElement ehkrmld0"
      data-checked="true"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        checked=""
        class="cache-po1kkw-RadioInput ehkrmld1"
        id="radio-choice"
        name="radio"
        type="radio"
        value="choice"
      />
      <svg
        class="cache-j51tvx-StyledIcon ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-u6wkt9-InnerCircleRing ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
    </div>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with radio type and disabled prop 1`] = `
<DocumentFragment>
  .cache-4bnz2x-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-4bnz2x-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-4bnz2x-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-17dmuxp-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='false'],
.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-17dmuxp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-17dmuxp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-17dmuxp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffebf2;
  fill: #b3144d;
}

.cache-17dmuxp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #d9dadd;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-17dmuxp-RadioContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-17dmuxp-RadioContainer-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-17dmuxp-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-17dmuxp-RadioContainer-StyledElement label {
  display: none;
}

.cache-po1kkw-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-po1kkw-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-po1kkw-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-po1kkw-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #b3144d;
}

.cache-po1kkw-RadioInput:focus+.ehkrmld2 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-po1kkw-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffebf2;
  fill: #b3144d;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-j51tvx-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b5b7bd;
}

.cache-j51tvx-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-u6wkt9-InnerCircleRing {
  fill: #b5b7bd;
}

<div
    class="cache-4bnz2x-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="true"
  >
    <div
      aria-disabled="true"
      class="e1s5n3hj0 cache-17dmuxp-RadioContainer-StyledElement ehkrmld0"
      data-checked="false"
    >
      <input
        aria-disabled="true"
        aria-invalid="false"
        class="cache-po1kkw-RadioInput ehkrmld1"
        disabled=""
        id="radio-choice"
        name="radio"
        type="radio"
        value="choice"
      />
      <svg
        class="cache-j51tvx-StyledIcon ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-u6wkt9-InnerCircleRing ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
    </div>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with radio type and isError prop 1`] = `
<DocumentFragment>
  .cache-4bnz2x-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-4bnz2x-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-4bnz2x-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-17dmuxp-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='false'],
.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-17dmuxp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-17dmuxp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-17dmuxp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffebf2;
  fill: #b3144d;
}

.cache-17dmuxp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #d9dadd;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-17dmuxp-RadioContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-17dmuxp-RadioContainer-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-17dmuxp-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-17dmuxp-RadioContainer-StyledElement label {
  display: none;
}

.cache-po1kkw-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-po1kkw-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-po1kkw-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-po1kkw-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #b3144d;
}

.cache-po1kkw-RadioInput:focus+.ehkrmld2 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-po1kkw-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffebf2;
  fill: #b3144d;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-j51tvx-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b5b7bd;
}

.cache-j51tvx-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-u6wkt9-InnerCircleRing {
  fill: #b5b7bd;
}

<div
    class="cache-4bnz2x-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="false"
    data-error="true"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-17dmuxp-RadioContainer-StyledElement ehkrmld0"
      data-checked="false"
      data-error="true"
    >
      <input
        aria-disabled="false"
        aria-invalid="true"
        class="cache-po1kkw-RadioInput ehkrmld1"
        id="radio-choice"
        name="radio"
        type="radio"
        value="choice"
      />
      <svg
        class="cache-j51tvx-StyledIcon ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-u6wkt9-InnerCircleRing ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
    </div>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with radio type and tooltip prop 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-4bnz2x-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-4bnz2x-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-4bnz2x-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-17dmuxp-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='false'],
.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-17dmuxp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-17dmuxp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-17dmuxp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffebf2;
  fill: #b3144d;
}

.cache-17dmuxp-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #d9dadd;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-17dmuxp-RadioContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-17dmuxp-RadioContainer-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-17dmuxp-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-17dmuxp-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-17dmuxp-RadioContainer-StyledElement label {
  display: none;
}

.cache-po1kkw-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-po1kkw-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-po1kkw-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-po1kkw-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #b3144d;
}

.cache-po1kkw-RadioInput:focus+.ehkrmld2 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-po1kkw-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffebf2;
  fill: #b3144d;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-j51tvx-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b5b7bd;
}

.cache-j51tvx-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-u6wkt9-InnerCircleRing {
  fill: #b5b7bd;
}

<div
    aria-describedby=":rl:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <div
      class="cache-4bnz2x-Container e1s5n3hj1"
      data-checked="false"
      data-disabled="false"
    >
      <div
        aria-disabled="false"
        class="e1s5n3hj0 cache-17dmuxp-RadioContainer-StyledElement ehkrmld0"
        data-checked="false"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="cache-po1kkw-RadioInput ehkrmld1"
          id="radio-choice"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="cache-j51tvx-StyledIcon ehkrmld2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-u6wkt9-InnerCircleRing ehkrmld4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-ivayk3-RadioMark ehkrmld3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
      </div>
      Radio card
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with showTick and type checkbox 1`] = `
<DocumentFragment>
  .cache-4bnz2x-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-4bnz2x-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-4bnz2x-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-14ks67e-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-14ks67e-CheckboxContainer-StyledElement[aria-disabled='false'],
.cache-14ks67e-CheckboxContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-14ks67e-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-14ks67e-CheckboxContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-14ks67e-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-14ks67e-CheckboxContainer-StyledElement[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-14ks67e-CheckboxContainer-StyledElement .eqr7bqq6,
.cache-14ks67e-CheckboxContainer-StyledElement .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-14ks67e-CheckboxContainer-StyledElement .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-14ks67e-CheckboxContainer-StyledElement .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-14ks67e-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-14ks67e-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-14ks67e-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-14ks67e-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-14ks67e-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-14ks67e-CheckboxContainer-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-14ks67e-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-aitsb9-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-aitsb9-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-aitsb9-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-aitsb9-CheckboxInput:not(:disabled):checked+.eqr7bqq3,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-aitsb9-CheckboxInput:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-aitsb9-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-aitsb9-CheckboxInput:focus+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-aitsb9-CheckboxInput:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-aitsb9-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-aitsb9-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1lcemq7-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1at8irr-InnerCheckbox {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<div
    class="cache-4bnz2x-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="false"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-14ks67e-CheckboxContainer-StyledElement eqr7bqq1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-aitsb9-CheckboxInput eqr7bqq2"
        id="checkbox"
        name="checkbox"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1lcemq7-StyledIcon eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-1at8irr-InnerCheckbox eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
    Checkbox card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with showTick and type radio 1`] = `
<DocumentFragment>
  .cache-4bnz2x-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-4bnz2x-Container[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-4bnz2x-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-4bnz2x-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-4bnz2x-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-1qx14x0-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1qx14x0-RadioContainer-StyledElement[aria-disabled='false'],
.cache-1qx14x0-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1qx14x0-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-1qx14x0-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-1qx14x0-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffebf2;
  fill: #b3144d;
}

.cache-1qx14x0-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-1qx14x0-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1qx14x0-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1qx14x0-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #d9dadd;
}

.cache-1qx14x0-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-1qx14x0-RadioContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-1qx14x0-RadioContainer-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-1qx14x0-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-po1kkw-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-po1kkw-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-po1kkw-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-po1kkw-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #b3144d;
}

.cache-po1kkw-RadioInput:focus+.ehkrmld2 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-po1kkw-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffebf2;
  fill: #b3144d;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-j51tvx-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b5b7bd;
}

.cache-j51tvx-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-u6wkt9-InnerCircleRing {
  fill: #b5b7bd;
}

<div
    class="cache-4bnz2x-Container e1s5n3hj1"
    data-checked="false"
    data-disabled="false"
  >
    <div
      aria-disabled="false"
      class="e1s5n3hj0 cache-1qx14x0-RadioContainer-StyledElement ehkrmld0"
      data-checked="false"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="cache-po1kkw-RadioInput ehkrmld1"
        id="checkbox-choice"
        name="checkbox"
        type="radio"
        value="choice"
      />
      <svg
        class="cache-j51tvx-StyledIcon ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-u6wkt9-InnerCircleRing ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
    </div>
    Checkbox card
  </div>
</DocumentFragment>
`;
